fixed teaser text alignment

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -35,6 +35,7 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 .teaser-text {
   position: absolute;
   right: 30px;
+  bottom: 0;
   left: 30px;
   color: #fff;
 }
